--- a/style.css
+++ b/style.css
@@ -56,7 +56,9 @@ select {
     scroll-behavior: auto !important;
   }
 }
-html {
+* {
   background-image: linear-gradient(#000000, #004aad);
   background-size: cover;
 }
+
+/*# sourceMappingURL=style.css.map */
