--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,63 @@
 nav {
-  background-image: url("../images/cloud.png");
+  background-image: url("images/cloud.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 500px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 5px;
+    width: 70%;
+    margin: 0;
+    padding-right: 2rem;
+  }
+  li {
+    list-style: none;
+  }
+}
 
-  //background-image: url("../images/cloud.png") no-repeat center center;
+header {
+  position: relative;
+  .container > a {
+    position: absolute;
+    left: 10px;
+    top: 350px;
+  }
+}
+
+.link-github {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  z-index: 5;
+  color: red;
+}
+.link-github svg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
+.link-github span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  font-size: 8px;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  z-index: -1; // Ensures text is on top of the SVG
+  pointer-events: none; // So clicking still works
 }
