--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,9 +1,83 @@
-nav {
+// nav {
+//   background-image: url("images/cloud.png");
+//   background-size: cover;
+//   background-repeat: no-repeat;
+//   background-position: center;
+//   height: 600px;
+//   display: flex;
+//   justify-content: flex-end;
+//   align-items: center;
+//   ul {
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: space-around;
+//     gap: 5px;
+//     width: 70%;
+//     margin: 0;
+//     padding-right: 2rem;
+//   }
+//   li {
+//     list-style: none;
+//   }
+// }
+
+// header {
+//   position: relative;
+//   .container > a {
+//     position: absolute;
+//     left: 10px;
+//     top: 350px;
+//   }
+// }
+
+// //Star!!!!
+// .link-github {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   position: relative;
+//   width: 200px;
+//   height: 200px;
+//   z-index: 5;
+//   color: white;
+//   font-size: 1.5rem;
+
+//   svg {
+//     position: absolute;
+//     top: 500px;
+//     width: 100%;
+//     height: 100%;
+//     z-index: 2;
+//   }
+
+//   span {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     position: absolute;
+//     width: 100%;
+//     height: 100%;
+//     z-index: -1; // Ensures text is on top of the SVG
+//     pointer-events: none; // So clicking still works
+//   }
+// }
+
+header {
+  svg {
+    width: 50%;
+  }
+}
+body::before {
+  content: "";
+  grid-column: 1/3;
+  grid-row: 2/4;
   background-image: url("images/cloud.png");
   background-size: cover;
-  background-repeat: no-repeat;
   background-position: center;
-  height: 500px;
+  z-index: -1;
+}
+
+nav {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -16,18 +90,6 @@ nav {
     margin: 0;
     padding-right: 2rem;
   }
-  li {
-    list-style: none;
-  }
-}
-
-header {
-  position: relative;
-  .container > a {
-    position: absolute;
-    left: 10px;
-    top: 350px;
-  }
 }
 
 .link-github {
@@ -35,29 +97,26 @@ header {
   align-items: center;
   justify-content: center;
   position: relative;
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 750px;
+  margin-left: 20px;
   z-index: 5;
-  color: red;
-}
-.link-github svg {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-}
-
-.link-github span {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  font-size: 8px;
   color: white;
-  font-weight: bold;
-  text-align: center;
-  z-index: -1; // Ensures text is on top of the SVG
-  pointer-events: none; // So clicking still works
+  font-size: 1.5rem;
+
+  svg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+  }
+
+  span {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1; // Ensures text is on top of the SVG
+    pointer-events: none; // So clicking still works
+  }
 }
