--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,1 +1,74 @@
 @import "reset";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+body {
+    background-color: darkblue;
+}
+
+main {
+    text-align: center;
+    justify-content: center;
+    max-width: 500px;
+    margin:auto;
+}
+
+h1, h2, h3, p, a, li {
+    color: white;
+    font-size: 1.5rem;
+    font-family: 'Roboto';
+}
+
+h1, h2, h3, strong {
+    font-size: 40px;
+}
+
+li {
+    list-style: none;
+}
+
+.link-guidelines, .link-downloadcss, .link-downloadhtml, .link-codepen {
+    color: black;
+    background: white;
+    padding: 15px;
+    text-decoration: none;
+    display: block;
+    margin: 15px;
+}
+
+.css li {
+    color: black;
+    background: white;
+    max-width: 500px;
+    margin: 5px;
+    padding: 10px;
+    display: inline-flex;
+}
+
+.li {
+    display: flex;
+    padding: 10px;
+}
+
+.numbers {
+    align-items: center;
+    padding: 20px;
+    font-size: 50px;
+    margin-left: 20px;
+    max-width: 1.8em;
+}
+
+
+
+
+strong {
+    display: block;
+    padding: 30px;
+}
+
+.container {
+    padding: 20px;
+}
+
+#contribute hr {
+    max-width: 100%;
+}
