--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,9 +1,92 @@
-// nav {
+nav {
+  background-image: url("images/cloud.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 180px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 10px;
+    width: 100%;
+    margin: 0;
+    padding: 20px 0 0 0;
+  }
+  li {
+    list-style: none;
+
+    a {
+      color: black;
+      text-shadow: 1px 0px 1px rgba(0, 0, 0, 0.5);
+    }
+  }
+}
+
+header {
+  position: relative;
+  .container > a {
+    //position: absolute;
+    // top:200;
+    // z-index: 5;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+//Star!!!!
+.link-github {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 200px;
+  height: 150px;
+  z-index: 10;
+  color: black;
+
+  svg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 20;
+    fill: #e6e8fb;
+  }
+
+  span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1; // Ensures text is on top of the SVG
+
+    pointer-events: none; // So clicking still works
+  }
+}
+
+// header {
+//   svg {
+//     width: 50%;
+//   }
+// }
+// body::before {
+//   content: "";
 //   background-image: url("images/cloud.png");
+//   object-fit: scale-down;
 //   background-size: cover;
-//   background-repeat: no-repeat;
 //   background-position: center;
-//   height: 600px;
+//   z-index: -1;
+//   position: absolute;
+//   width: 100%;
+//   height: 100%;
+// }
+
+// nav {
 //   display: flex;
 //   justify-content: flex-end;
 //   align-items: center;
@@ -16,44 +99,29 @@
 //     margin: 0;
 //     padding-right: 2rem;
 //   }
-//   li {
-//     list-style: none;
-//   }
 // }
 
-// header {
-//   position: relative;
-//   .container > a {
-//     position: absolute;
-//     left: 10px;
-//     top: 350px;
-//   }
-// }
-
-// //Star!!!!
 // .link-github {
 //   display: flex;
 //   align-items: center;
 //   justify-content: center;
 //   position: relative;
 //   width: 200px;
-//   height: 200px;
+//   height: 750px;
+//   margin-left: 20px;
 //   z-index: 5;
 //   color: white;
 //   font-size: 1.5rem;
 
 //   svg {
 //     position: absolute;
-//     top: 500px;
 //     width: 100%;
 //     height: 100%;
-//     z-index: 2;
+//     z-index: -2;
 //   }
 
 //   span {
 //     display: flex;
-//     align-items: center;
-//     justify-content: center;
 //     position: absolute;
 //     width: 100%;
 //     height: 100%;
@@ -61,62 +129,3 @@
 //     pointer-events: none; // So clicking still works
 //   }
 // }
-
-header {
-  svg {
-    width: 50%;
-  }
-}
-body::before {
-  content: "";
-  grid-column: 1/3;
-  grid-row: 2/4;
-  background-image: url("images/cloud.png");
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
-}
-
-nav {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 5px;
-    width: 70%;
-    margin: 0;
-    padding-right: 2rem;
-  }
-}
-
-.link-github {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  width: 200px;
-  height: 750px;
-  margin-left: 20px;
-  z-index: 5;
-  color: white;
-  font-size: 1.5rem;
-
-  svg {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -2;
-  }
-
-  span {
-    display: flex;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1; // Ensures text is on top of the SVG
-    pointer-events: none; // So clicking still works
-  }
-}
