--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,39 +1,39 @@
 body {
-  // display: flex;
-  // flex-direction: column;
-  display: grid;
-  grid-template-rows: auto 1fr 1fr auto;
-  grid-template-columns: 1fr 3fr;
+  display: flex;
+  flex-direction: column;
+  // display: grid;
+  // grid-template-rows: auto 1fr 1fr auto;
+  // grid-template-columns: 1fr 3fr;
   text-align: center;
   color: white;
-  .skip-link {
-    grid-column: 1/3;
-    grid-row: 1/2;
-  }
-
-  header {
-    grid-column: 1/3;
-    grid-row: 2/4;
-  }
-  nav {
-    grid-column: 1/3;
-    grid-row: 2/4;
-  }
-
-  main {
-    grid-column: 1/3;
-    grid-row: 4/5;
-  }
-  .profile {
-    grid-column: 1/3;
-    grid-row: 5/6;
-  }
-  #styles {
-    grid-column: 1/3;
-    grid-row: 6/7;
-  }
-  footer {
-    grid-column: 1/3;
-    grid-row: 7/8;
-  }
+  // .skip-link {
+  //   grid-column: 1/3;
+  //   grid-row: 1/2;
+  // }
 }
+//   header {
+//     grid-column: 1/3;
+//     grid-row: 2/4;
+//   }
+//   nav {
+//     grid-column: 1/3;
+//     grid-row: 2/4;
+//   }
+
+//   main {
+//     grid-column: 1/3;
+//     grid-row: 4/5;
+//   }
+//   .profile {
+//     grid-column: 1/3;
+//     grid-row: 5/6;
+//   }
+//   #styles {
+//     grid-column: 1/3;
+//     grid-row: 6/7;
+//   }
+//   footer {
+//     grid-column: 1/3;
+//     grid-row: 7/8;
+//   }
+// }
