--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,7 @@
  * @link https://github.com/hankchizljaw/modern-css-reset
 */
 /* Box sizing rules */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 *,
 *::before,
 *::after {
@@ -56,7 +57,303 @@ select {
     scroll-behavior: auto !important;
   }
 }
+body {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  color: white;
+}
+
+.container ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+#about,
+#guidelines,
+#contribute {
+  margin: 5rem 0 auto;
+  max-width: 80%;
+  display: flex;
+  justify-self: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+#about .container:nth-of-type(1) {
+  margin-top: 2rem;
+}
+#about .container:nth-of-type(1) h2 {
+  margin-bottom: 1rem;
+}
+#about .container:nth-of-type(1) p {
+  margin: 0;
+}
+#about .container:nth-of-type(1) p:nth-of-type(2)::after,
+#about .container:nth-of-type(1) blockquote::after {
+  content: "_________________________";
+  display: block;
+  margin: 2rem 0;
+}
+#about .container:nth-of-type(1) blockquote p strong {
+  display: block;
+}
+#about .container:nth-of-type(1) blockquote {
+  margin: 0;
+}
+
+#about .container:nth-of-type(2) {
+  margin-top: 3rem;
+}
+#about .container:nth-of-type(2) ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: auto;
+  gap: 1em;
+}
+#about .container:nth-of-type(2) ul li {
+  padding: 1em;
+  background-color: white;
+  color: black;
+}
+
+.link-guidelines {
+  display: block;
+  margin: auto;
+  max-width: fit-content;
+  background-color: white;
+  color: black;
+  padding: 1em 2em;
+  text-decoration: none;
+}
+
+#contribute .container:nth-of-type(2) ol {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  max-width: 60%;
+  justify-self: center;
+  list-style-type: none;
+  counter-reset: my-counter;
+  padding: 0;
+  text-align: center;
+}
+#contribute .container:nth-of-type(2) ol li {
+  counter-increment: my-counter;
+}
+#contribute .container:nth-of-type(2) ol li::before {
+  content: counter(my-counter);
+  margin-right: 1rem;
+  position: relative;
+  font-weight: bold;
+  font-size: 4rem;
+}
+
+#files .container {
+  display: flex;
+  justify-self: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 15px;
+  width: 30%;
+}
+#files .container a {
+  width: 100%;
+  background-color: white;
+  color: black;
+  padding: 1em 2em;
+  text-decoration: none;
+}
+
 html {
   background-image: linear-gradient(#000000, #004aad);
   background-size: cover;
+}
+
+nav {
+  background-image: url("images/cloud.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 180px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 10px;
+  width: 100%;
+  margin: 0;
+  padding: 20px 0 0 0;
+}
+nav li {
+  list-style: none;
+}
+nav li a {
+  color: black;
+}
+
+header {
+  position: relative;
+}
+header .container > a {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.link-github {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 200px;
+  height: 150px;
+  z-index: 10;
+  color: black;
+}
+.link-github svg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 20;
+  fill: #e6e8fb;
+}
+.link-github span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  pointer-events: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
+@media (min-width: 1160px) {
+  nav {
+    height: 90vh;
+  }
+}
+@media (min-width: 825px) and (max-width: 1160px) {
+  nav {
+    height: 500px;
+  }
+}
+@media (min-width: 425px) and (max-width: 825px) {
+  nav {
+    height: 355px;
+  }
+}
+
+@media (max-width: 825px) {
+  #files .container {
+    width: 80%;
+  }
+
+  #contribute .container:nth-of-type(2) ol li::before {
+    display: block;
+  }
+}
+@media (min-width: 825px) {
+  footer .container ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5em;
+  }
+  footer .container .link-github svg {
+    height: 300px;
+  }
+
+  nav ul {
+    justify-content: flex-end;
+    gap: 15px;
+    padding-right: 15px;
+  }
+
+  header .container > a {
+    position: absolute;
+    top: calc(175% + 20px);
+    z-index: 5;
+    left: 5%;
+    transform: translateX(-5%);
+  }
+  header .link-github {
+    color: white;
+  }
+  header .link-github svg {
+    fill: black;
+  }
+
+  body {
+    font-size: 1.25rem;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
+}
+@media (min-width: 825px) and (max-width: 1160px) {
+  header .link-github {
+    height: 200px;
+  }
+}
+@media (min-width: 1160px) and (max-width: 1440px) {
+  header .container > a {
+    top: calc(175% + 10px);
+  }
+  header .link-github {
+    height: 300px;
+    width: 250px;
+  }
+
+  body {
+    font-size: 1.5rem;
+  }
+}
+@media (min-width: 1440px) {
+  header .container > a {
+    top: calc(185% + 40px);
+  }
+
+  nav ul {
+    font-size: 1.75rem;
+    gap: 60px;
+    padding-right: 40px;
+  }
+
+  .link-github {
+    font-size: 1.75rem;
+    height: 350px;
+    width: 300px;
+  }
+}
+* {
+  color: white;
+  font-family: "Roboto";
+}
+
+.page-footer {
+  background-image: url("images/cloud.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 700px;
 }
