--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -27,18 +27,25 @@
 // }
 
 .page-footer {
-  position: relative;
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 700px;
-    z-index: -5;
-    background-image: url("images/cloud.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
+  background-image: url("images/cloud.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 700px;
+
+  // position: relative;
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   bottom: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 700px;
+  //   z-index: -5;
+  //   background-image: url("images/cloud.png");
+  //   background-size: cover;
+  //   background-repeat: no-repeat;
+  //   background-position: center;
+  //   margin-bottom: -250px;
+  // }
 }
