--- a/public/style.css
+++ b/public/style.css
@@ -271,14 +271,7 @@ li {
   }
 }
 @media (min-width: 825px) {
-  footer .container ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5em;
-  }
-  footer .container .link-github svg {
+  .page-footer .link-github svg {
     height: 300px;
   }
 
@@ -350,10 +343,36 @@ li {
   font-family: "Roboto";
 }
 
+footer .container ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5em;
+}
+footer .container p,
+footer .container a {
+  color: black;
+}
+
 .page-footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+}
+.page-footer::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 700px;
+  z-index: -5;
   background-image: url("images/cloud.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 700px;
+  margin-bottom: -250px;
 }
