--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -26,26 +26,38 @@
 //   }
 // }
 
-.page-footer {
-  background-image: url("images/cloud.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 700px;
+footer .container {
+  ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5em;
+  }
+  p,
+  a {
+    color: black;
+  }
+}
 
-  // position: relative;
-  // &::after {
-  //   content: "";
-  //   position: absolute;
-  //   bottom: 0;
-  //   left: 0;
-  //   width: 100%;
-  //   height: 700px;
-  //   z-index: -5;
-  //   background-image: url("images/cloud.png");
-  //   background-size: cover;
-  //   background-repeat: no-repeat;
-  //   background-position: center;
-  //   margin-bottom: -250px;
-  // }
+.page-footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 700px;
+    z-index: -5;
+    background-image: url("images/cloud.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-bottom: -250px;
+  }
 }
