--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -26,39 +26,56 @@
 //   }
 // }
 
-footer .container {
+.page-footer .container {
   ul {
+    margin-bottom: calc(10rem + 50px);
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    gap: 1.5em;
+    .link-github svg {
+      z-index: -2;
+    }
   }
-  p,
-  a,
-  strong {
+
+  p:nth-of-type(2) {
     color: black;
+    > a,
+    strong {
+      color: black;
+    }
+  }
+
+  p:nth-of-type(3) {
+    color: black;
+    > a {
+      color: black;
+    }
   }
 }
 
 .page-footer {
+  background-image: url("images/cloud_footer.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  //background-position: center;
+
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  position: relative;
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 700px;
-    z-index: -5;
-    background-image: url("images/cloud.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-bottom: -250px;
-  }
+  justify-content: end;
+
+  // position: relative;
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   bottom: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 900px;
+  //   z-index: -5;
+  //   background-image: url("images/cloud.png");
+  //   background-size: cover;
+  //   background-repeat: no-repeat;
+  //   background-position: center;
+  //   margin-bottom: -350px;
+  // }
 }
