--- a/sass/_containers.scss
+++ b/sass/_containers.scss
@@ -55,7 +55,7 @@
     li {
       padding: 1em;
       background-color: white;
-      color: black;
+      color: rgb(26, 25, 25);
     }
   }
 }
@@ -66,7 +66,7 @@
   margin: auto;
   max-width: fit-content;
   background-color: white;
-  color: black;
+  color: rgb(26, 25, 25);
   padding: 1em 2em;
   text-decoration: none;
 }
@@ -91,7 +91,7 @@
       margin-right: 1rem;
       position: relative;
       font-weight: bold;
-      font-size: 4rem;
+      font-size: 5rem;
     }
   }
 }
@@ -109,7 +109,7 @@
   a {
     width: 100%;
     background-color: white;
-    color: black;
+    color: rgb(26, 25, 25);
     padding: 1em 2em;
     text-decoration: none;
   }
