--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -26,56 +26,39 @@
 //   }
 // }
 
-.page-footer .container {
-  ul {
-    margin-bottom: calc(10rem + 50px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    .link-github svg {
-      z-index: -2;
-    }
-  }
-
-  p:nth-of-type(2) {
-    color: black;
-    > a,
-    strong {
-      color: black;
-    }
-  }
-
-  p:nth-of-type(3) {
-    color: black;
-    > a {
-      color: black;
-    }
-  }
-}
-
 .page-footer {
+  padding: 0 2rem;
   background-image: url("images/cloud_footer.png");
   background-size: cover;
   background-repeat: no-repeat;
-  //background-position: center;
-
   display: flex;
   flex-direction: column;
   justify-content: end;
 
-  // position: relative;
-  // &::after {
-  //   content: "";
-  //   position: absolute;
-  //   bottom: 0;
-  //   left: 0;
-  //   width: 100%;
-  //   height: 900px;
-  //   z-index: -5;
-  //   background-image: url("images/cloud.png");
-  //   background-size: cover;
-  //   background-repeat: no-repeat;
-  //   background-position: center;
-  //   margin-bottom: -350px;
-  // }
+  .container {
+    ul {
+      margin-bottom: calc(10rem + 50px);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .link-github svg {
+        z-index: -2;
+      }
+    }
+
+    p:nth-of-type(2) {
+      color: rgb(26, 25, 25);
+      > a,
+      strong {
+        color: rgb(26, 25, 25);
+      }
+    }
+
+    p:nth-of-type(3) {
+      color: rgb(26, 25, 25);
+      > a {
+        color: rgb(26, 25, 25);
+      }
+    }
+  }
 }
