--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,3 +1,7 @@
+.skip-link {
+  padding-bottom: 5rem;
+}
+
 nav {
   background-image: url("images/cloud.png");
   background-size: cover;
@@ -26,13 +30,13 @@ nav {
 }
 
 header {
+  margin-bottom: -50px;
   position: relative;
-  .container > a {
-    //position: absolute;
-    // top:200;
-    // z-index: 5;
-    left: 50%;
-    transform: translateX(-50%);
+  .container {
+    > a {
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 }
 
@@ -45,7 +49,7 @@ header {
   width: 200px;
   height: 150px;
   z-index: 10;
-  color: black;
+  color: rgb(26, 25, 25);
 
   svg {
     position: absolute;
